fix: View Info icon is overlapping slightly

--- a/src/app/fyle/my-view-report/my-view-report.page.scss
+++ b/src/app/fyle/my-view-report/my-view-report.page.scss
@@ -190,6 +190,7 @@
     font-size: 12px;
     font-weight: 500;
     color: $light-grey;
+    align-items: center;
 
     &__icon {
       height: 18px;
